Compilar en open cobol

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     
     <groupId>es.cvjpy.alfa</groupId>
     <artifactId>alfa-ent</artifactId>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
     <name>11 - alfa-ent - Las Entities comunes</name>
@@ -21,7 +22,6 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-    
 
     <dependencies>
         <dependency>
